--- a/package.json
+++ b/package.json
@@ -21,25 +21,47 @@
 		"test:coverage": "vitest run --coverage",
 		"build:mobile": "BUILD_TARGET=capacitor vite build",
 		"cap:ios": "npm run build:mobile && npx cap copy ios && npx cap open ios",
-		"cap:android": "npm run build:mobile && npx cap copy android && npx cap open android"
+		"cap:android": "npm run build:mobile && npx cap copy android && npx cap open android",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build",
+		"test:visual": "playwright test --project=visual-mobile --project=visual-desktop",
+		"test:visual:update": "playwright test --project=visual-mobile --project=visual-desktop --update-snapshots",
+		"test:e2e": "playwright test --project='Desktop Chrome'",
+		"test:e2e:mobile": "playwright test --project='iPhone 14' --project='Pixel 7'",
+		"test:e2e:desktop": "playwright test --project='Desktop Chrome' --project='Desktop Safari' --project='Desktop Firefox'",
+		"test:a11y": "playwright test tests/e2e/accessibility.spec.ts --project='Desktop Chrome'",
+		"test:perf": "playwright test tests/e2e/performance.spec.ts --project='Desktop Chrome'",
+		"test:all": "./scripts/test-all.sh",
+		"test:pre-prod": "./scripts/pre-production-test.sh"
 	},
 	"devDependencies": {
+		"@axe-core/playwright": "^4.11.1",
+		"@chromatic-com/storybook": "^5.0.0",
 		"@cloudflare/puppeteer": "^1.0.5",
 		"@eslint/js": "^9.39.2",
+		"@storybook/addon-a11y": "^10.2.4",
+		"@storybook/addon-docs": "^10.2.4",
+		"@storybook/addon-svelte-csf": "^5.0.10",
+		"@storybook/addon-vitest": "^10.2.4",
+		"@storybook/sveltekit": "^10.2.4",
 		"@sveltejs/adapter-cloudflare": "^7.2.4",
 		"@sveltejs/kit": "^2.49.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/vite": "^4.1.18",
 		"@testing-library/jest-dom": "^6.9.1",
 		"@testing-library/svelte": "^5.3.1",
+		"@vitest/browser-playwright": "^4.0.18",
 		"@vitest/coverage-v8": "^4.0.18",
 		"eslint": "^9.39.2",
+		"eslint-plugin-storybook": "^10.2.4",
 		"eslint-plugin-svelte": "^3.14.0",
 		"globals": "^17.0.0",
 		"jsdom": "^27.4.0",
+		"playwright": "^1.58.1",
 		"prettier": "^3.8.0",
 		"prettier-plugin-svelte": "^3.4.1",
 		"sharp": "^0.34.5",
+		"storybook": "^10.2.4",
 		"svelte": "^5.45.6",
 		"svelte-check": "^4.3.4",
 		"tailwindcss": "^4.1.18",
