--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,15 @@ on:
 jobs:
   lint-and-check:
     runs-on: ubuntu-latest
+    env:
+      PUBLIC_SUPABASE_URL: http://placeholder.supabase.co
+      PUBLIC_SUPABASE_ANON_KEY: placeholder
+      SUPABASE_SERVICE_ROLE_KEY: placeholder
+      RESEND_API_KEY: placeholder
+      EMAIL_FROM_DOMAIN: placeholder.com
+      GEMINI_API_KEY: placeholder
+      OPENAI_API_KEY: placeholder
+      DEEPGRAM_API_KEY: placeholder
     steps:
       - uses: actions/checkout@v4
 
@@ -45,6 +54,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: [lint-and-check, unit-tests]
+    env:
+      PUBLIC_SUPABASE_URL: http://placeholder.supabase.co
+      PUBLIC_SUPABASE_ANON_KEY: placeholder
+      SUPABASE_SERVICE_ROLE_KEY: placeholder
+      RESEND_API_KEY: placeholder
+      EMAIL_FROM_DOMAIN: placeholder.com
+      GEMINI_API_KEY: placeholder
+      OPENAI_API_KEY: placeholder
+      DEEPGRAM_API_KEY: placeholder
     steps:
       - uses: actions/checkout@v4
 
@@ -105,6 +123,15 @@ jobs:
   e2e-tests:
     runs-on: ubuntu-latest
     needs: build
+    env:
+      PUBLIC_SUPABASE_URL: http://placeholder.supabase.co
+      PUBLIC_SUPABASE_ANON_KEY: placeholder
+      SUPABASE_SERVICE_ROLE_KEY: placeholder
+      RESEND_API_KEY: placeholder
+      EMAIL_FROM_DOMAIN: placeholder.com
+      GEMINI_API_KEY: placeholder
+      OPENAI_API_KEY: placeholder
+      DEEPGRAM_API_KEY: placeholder
     steps:
       - uses: actions/checkout@v4
 
