--- a/package.json
+++ b/package.json
@@ -76,13 +76,11 @@
 		"@capacitor/cli": "^8.0.2",
 		"@capacitor/core": "^8.0.2",
 		"@capacitor/ios": "^8.0.2",
+		"@kos/pdf-gen": "file:../pdf-gen",
 		"@supabase/ssr": "^0.8.0",
 		"@supabase/supabase-js": "^2.89.0",
 		"@sveltejs/adapter-static": "^3.0.10",
 		"gsap": "^3.14.2",
-		"html2canvas": "^1.4.1",
-		"jspdf": "^4.0.0",
-		"jspdf-autotable": "^5.0.7",
 		"lucide-svelte": "^0.562.0",
 		"openai": "^6.15.0",
 		"resend": "^6.7.0",
