--- a/package.json
+++ b/package.json
@@ -76,17 +76,18 @@
 		}
 	},
 	"dependencies": {
+		"@capacitor/android": "^8.0.2",
 		"@capacitor/app": "^8.0.0",
 		"@capacitor/cli": "^8.0.2",
 		"@capacitor/core": "^8.0.2",
 		"@capacitor/ios": "^8.0.2",
 		"@kostia06/pdf-gen": "^1.0.1",
-		"jspdf": "^4.1.0",
-		"jspdf-autotable": "^5.0.7",
 		"@supabase/ssr": "^0.8.0",
 		"@supabase/supabase-js": "^2.89.0",
 		"@sveltejs/adapter-static": "^3.0.10",
 		"gsap": "^3.14.2",
+		"jspdf": "^4.1.0",
+		"jspdf-autotable": "^5.0.7",
 		"lucide-svelte": "^0.562.0",
 		"resend": "^6.7.0",
 		"zod": "^4.3.5"
