Remove ServiceTemplatePicker, fix wrangler config

--- a/apps/web/wrangler.toml
+++ b/apps/web/wrangler.toml
@@ -1,4 +1,5 @@
-name = "mrblu-web"
+name = "mr-blu"
+pages_build_output_dir = "dist"
 compatibility_date = "2025-01-01"
 compatibility_flags = ["nodejs_compat"]
 
